@@ -29,6 +29,7 @@
 #define BX_INSTR_INVLPG         15
 #define BX_INSTR_INVEPT         16
 #define BX_INSTR_INVVPID        17
+#define BX_INSTR_INVPCID        18
 
 // possible types passed to BX_INSTR_CACHE_CNTRL()
 #define BX_INSTR_INVD           20
